script tag added, css style updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,25 @@
 <section>
-    <form id="apiForm" action="shorturl" method="GET" >
-      <fieldset>
-        <legend>URL Shortener</legend>
-        <label for="url_input">URL:</label>
-        <input id="url_input" type="text" name="url" placeholder="https://www.freecodecamp.org/" />
-        <input id="apiForm-submit" type="submit" value="SEND URL" />
-      </fieldset>
-    </form>
-  </section>
-  <section>
-    <div id="result">
-        <%- include('./message.ejs') %>
-        <%- include('./error.ejs') %>
+  <form id="apiForm" action="shorturl" method="GET">
+    <div class="row border form">
+      <label for="url_input">URL:</label>
+      <input id="url_input" type="text" name="url" placeholder="https://www.freecodecamp.org/" />
+      <button id="apiForm-submit" type="submit" >SEND URL</button>
     </div>
-  </section>
-  <section>
-    <form id="callForm" action="shorturl/:short" class="callUrl" method="POST">
+  </form>
+</section>
+<section>
+  <div id="result">
+    <%- include('./message.ejs') %>
+    <%- include('./error.ejs') %>
+  </div>
+</section>
+<section>
+  <form id="callForm" action="shorturl/:short" class="callUrl" method="POST">
+    <div class="row border form">
       <label for="short_input">Enter short link: </label>
       <input id="short_input" type="text" name="short" placeholder="1.." />
       <button type="submit">OPEN</button>
-    </form>
-  </section>      
+    </div>
+
+  </form>
+</section>
