--- a/public/style.css
+++ b/public/style.css
@@ -1,17 +1,20 @@
-:root{
+:root {
   font-size: 18px;
 }
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: rgb(37, 33, 34);
-  color:aliceblue;
+  color: aliceblue;
 }
-body{
+
+body {
   height: 100vh;
   height: 100dvh;
 }
+
 main {
   padding: 0;
   margin-top: 40px;
@@ -21,49 +24,85 @@ h3 {
   margin-top: 30px;
 }
 
-a,li,ul {
+a,
+li,
+ul {
   list-style: none;
   text-decoration: none;
   color: white;
 }
-a{
-  
-  background-color:rgba(2, 2, 2, 0.3); 
+
+a {
+
+  background-color: rgba(2, 2, 2, 0.3);
 }
 
 form {
-  margin: 10px auto;
-  padding: 20px;
-  max-width: 600px;
+  margin: 2rem 1rem ;
 }
 
-label {
-  margin-right: 10px;
+.form{
+  justify-content: space-between;
 }
-
 input {
-  padding: 5px;
+  padding: 0.5rem;
+  font-size: 1rem;
+  background-color: blanchedalmond;
+  color: black;
+  width: 60%;
+  height: 2rem;
+  border: 1px solid gray;
 }
 
-input[type='text'] {
-  width: 70%;
-  text-align: center;
-}
-.grid{
+
+.grid {
   display: grid;
 }
-.two-col{
+
+.two-col {
   grid-template-columns: max-content auto;
   column-gap: 1rem;
   height: 100%;
 }
-nav{
+
+nav {
   font-size: 1.8rem;
-  padding: 2rem  1.5rem;
+  padding: 2rem 1.5rem;
   background-color: rgba(2, 2, 2, 0.3);
-  
+
 }
-header{
+
+header {
   font-weight: 800;
   text-align: center;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+ 
+}
+.border{  
+  border: 1px solid wheat;
+}
+label {
+width: 30%;
+padding: 0.3rem;
+font-size: 1.4rem;
+}
+
+button {
+  background-color: rgb(177, 146, 135);
+  color: black;
+  padding: 0.5rem;
+  height: 2rem;
+  width: 10%;
+  border: 1px solid gray;
+}
+#result{
+  margin: 2rem 1rem;
+  font-size: 1.4rem;
+}
+.message{
+  margin-top: 2rem;
 }
