Styles updated, css @media updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
     <div class="row border form">
       <label for="url_input">URL:</label>
       <input id="url_input" type="text" name="url" placeholder="https://www.freecodecamp.org/" />
-      <button id="apiForm-submit" type="submit" >SEND URL</button>
+      <button id="apiForm-submit" type="submit" >SEND</button>
     </div>
   </form>
 </section>
@@ -16,7 +16,7 @@
 <section>
   <form id="callForm" action="shorturl/:short" class="callUrl" method="POST">
     <div class="row border form">
-      <label for="short_input">Enter short link: </label>
+      <label for="short_input">Index url: </label>
       <input id="short_input" type="text" name="short" placeholder="1.." />
       <button type="submit">OPEN</button>
     </div>
