--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>URL Shortener Microservice</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+  
     <!-- <script defer src="../public/controller.js"></script> -->
 </head>
 
@@ -24,6 +25,11 @@
         </main>
     </div>
     <footer>
+        <div class="links"><a class="author" href="https://codepen.io/Zory">Zory St</a>
+            <a href="https://www.freecodecamp.org/"><img id="fcc" alt="FCC" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/fcc_secondary.svg">  
+        FCC Project - Back End Development and APIs Projects</a> 
+        </div>
+       
     </footer>
     <script>
         const error = document.querySelector('.error');
@@ -46,7 +52,7 @@
                } else {
                   const pagelocation = (window.location.href).split('?')
                   console.log(pagelocation)
-                  link.textContent = pagelocation[0];
+                  link.textContent = pagelocation[0] +"/" + "<%= messageShort %>";
                   afull.href = pagelocation[0] +"/" + "<%= messageShort %>";
                }
             } 
