--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,37 @@
-:root {
+@import './media.css';
+
+
+@media screen and (min-width: 750px ) {
+  :root {
   font-size: 18px;
+}
+
+input {
+  padding: 0.5rem;
+  font-size: 1rem;
+  background-color: rgb(225, 224, 222);
+  color: black;
+  width: 60%;
+  height: 2rem;
+  border: 1px solid gray;
+}
+
+button {
+  width: 15%;
+}
+.grid {
+  display: grid;
+}
+
+.two-col {
+  grid-template-columns: max-content auto;
+  column-gap: 1rem;
+  height: 100%;
+}
+section {
+  margin: 2rem 1rem ;
+  font-size: 1.3rem;
+}
 }
 
 * {
@@ -14,16 +46,6 @@ body {
   height: 100vh;
   height: 100dvh;
 }
-
-main {
-  padding: 0;
-  margin-top: 40px;
-}
-
-h3 {
-  margin-top: 30px;
-}
-
 a,
 li,
 ul {
@@ -31,78 +53,80 @@ ul {
   text-decoration: none;
   color: white;
 }
+h1{
+  
+  font-size: 2rem;
+}
 
+header {
+  margin: 4rem auto 5rem;
+  font-weight: 800;
+  text-align: center;
+}
 a {
 
   background-color: rgba(2, 2, 2, 0.3);
 }
+li {
 
-form {
-  margin: 2rem 1rem ;
+  background-color: rgba(2, 2, 2, 0.3);
 }
 
 .form{
   justify-content: space-between;
-}
-input {
-  padding: 0.5rem;
-  font-size: 1rem;
-  background-color: blanchedalmond;
-  color: black;
-  width: 60%;
-  height: 2rem;
-  border: 1px solid gray;
+  align-items: center;
 }
 
-
-.grid {
-  display: grid;
-}
-
-.two-col {
-  grid-template-columns: max-content auto;
-  column-gap: 1rem;
-  height: 100%;
-}
 
 nav {
   font-size: 1.8rem;
-  padding: 2rem 1.5rem;
+  padding: 4rem 1.5rem;
   background-color: rgba(2, 2, 2, 0.3);
 
 }
 
-header {
-  font-weight: 800;
-  text-align: center;
-}
 
 .row {
   display: flex;
-  flex-direction: row;
- 
+  flex-direction: row; 
 }
 .border{  
-  border: 1px solid wheat;
+  border: 2px solid rgb(103, 100, 94);
 }
 label {
-width: 30%;
-padding: 0.3rem;
+width: 25%;
+padding: 0.3rem 1rem;
 font-size: 1.4rem;
 }
 
 button {
-  background-color: rgb(177, 146, 135);
+  background-color: rgb(139, 135, 134);
   color: black;
   padding: 0.5rem;
   height: 2rem;
-  width: 10%;
   border: 1px solid gray;
+  font-size: 1.1rem;
 }
-#result{
-  margin: 2rem 1rem;
-  font-size: 1.4rem;
-}
+
 .message{
-  margin-top: 2rem;
+  margin-top: 1rem;
+}
+footer{
+ /*  background-color: rgba(2, 2, 2, 0.3); */
+  height: 2rem;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  width: 100dvw;
+}
+#fcc{
+  background-color: white;
+  width:120px;
+  z-index: 0;
+}
+.column{
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
 }
