--- a/public/style.css
+++ b/public/style.css
@@ -32,6 +32,9 @@ section {
   margin: 2rem 1rem ;
   font-size: 1.3rem;
 }
+footer{
+  height: 2rem;
+}
 }
 
 * {
@@ -112,7 +115,10 @@ button {
   margin-top: 1rem;
 }
 footer{
- /*  background-color: rgba(2, 2, 2, 0.3); */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgba(2, 2, 2, 0.3);
   height: 2rem;
   position: fixed;
   bottom: 0;
@@ -124,6 +130,7 @@ footer{
   background-color: white;
   width:120px;
   z-index: 0;
+  padding: 0.2rem;
 }
 .column{
   display: flex;
