Styles updated, css @media updated

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,7 +14,7 @@
     <div class="grid two-col">
         <nav>
             <ul>
-                <li> <a href="/">home</a> </li>
+                <li> <a href="/">reload</a> </li>
             </ul>
         </nav>
         <main>
