--- a/public/style.css
+++ b/public/style.css
@@ -38,6 +38,7 @@ footer{
 }
 
 * {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -105,10 +106,11 @@ font-size: 1.4rem;
 button {
   background-color: rgb(139, 135, 134);
   color: black;
-  padding: 0.5rem;
   height: 2rem;
   border: 1px solid gray;
   font-size: 1.1rem;
+  text-align: center;
+  line-height: 2rem;
 }
 
 .message{
